add web sockets for quick match queue

--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
         "axios": "^1.13.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "laravel-echo": "^1.17.1",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
         "pinia": "^3.0.4",
+        "pusher-js": "^8.4.0",
         "reka-ui": "^2.6.1",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
